--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.4", features = ["blocking"] }
+reqwest = "0.12.4"
 scraper = "0.19.0"
+serde_json = "1.0.117"
+tokio = { version = "1.38.0", features = ["full"] }
